deployment-v3.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istiodemo-service-v3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: istiodemo-service
        version: v3
    spec:
      containers:
      - name: istiodemo-service
        image: eu.gcr.io/wave31-webhelp-rubendarion/istiodemo:3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
