deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-path-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: istiodemo-service
  action: DENY
  rules:
  - to:
    - operation:
        paths: ["/secret"]
